[gd_scene load_steps=3 format=3 uid="uid://dufixgg0qli34"]

[ext_resource type="PackedScene" uid="uid://c1f2p41bh0kpl" path="res://scenes/patricios/husares_infernales.tscn" id="1_fqc2w"]
[ext_resource type="Script" uid="uid://bt3wlm56y4yo3" path="res://scenes/patricios/escuadron_husares_infernales.gd" id="1_tm1yh"]

[node name="EscuadronHusaresInfernales" type="Node2D"]
script = ExtResource("1_tm1yh")

[node name="HusarInfernal5" parent="." instance=ExtResource("1_fqc2w")]
position = Vector2(-78, -76)

[node name="HusarInfernal7" parent="." instance=ExtResource("1_fqc2w")]
position = Vector2(-108, -115)

[node name="HusarInfernal" parent="." instance=ExtResource("1_fqc2w")]
position = Vector2(-47, -41)

[node name="HusarInfernal2" parent="." instance=ExtResource("1_fqc2w")]
position = Vector2(-23, 0)

[node name="HusarInfernal4" parent="." instance=ExtResource("1_fqc2w")]
position = Vector2(-86, 82)

[node name="HusarInfernal3" parent="." instance=ExtResource("1_fqc2w")]
position = Vector2(-51, 40)

[node name="HusarInfernal6" parent="." instance=ExtResource("1_fqc2w")]
position = Vector2(-125, 119)
